feat: implement new persistence logic #42